--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bingo Blog & Guides | Print My Bingo</title>
-<meta name="description" content="Bingo guides, classroom activities, party themes, and printing tips.">
+<title>Bingo Blog | Print My Bingo</title>
+<meta name="description" content="Bingo guides and printable game ideas.">
 <meta name="robots" content="index,follow">
 <link rel="canonical" href="https://printmybingo.com/blog.html">
+<link rel="alternate" href="https://printmybingo.com/blog.html" hreflang="x-default">
+<link rel="alternate" href="https://printmybingo.com/blog.html" hreflang="en">
+<link rel="alternate" href="https://printmybingo.com/blog.html" hreflang="he">
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="application/ld+json">
 {
@@ -20,7 +23,7 @@
 <body class="bg-gray-50 text-gray-800">
 <header class="bg-white border-b">
   <div class="max-w-6xl mx-auto p-4 flex items-center justify-between">
-    <a href="/" class="font-bold text-blue-700" id="backLink">← Print My Bingo</a>
+    <a href="/" class="font-bold text-blue-700" data-i18n="back">← Print My Bingo</a>
     <div class="flex items-center gap-4 text-sm">
       <nav class="hidden sm:flex gap-4">
         <a class="underline" href="/blog.html" data-i18n="navBlog">Blog</a>
@@ -35,13 +38,8 @@
 
 <main class="max-w-6xl mx-auto p-4">
   <article class="bg-white border rounded-2xl p-6 md:p-10 shadow-sm">
-    <h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4" data-i18n="h1">Bingo Blog & Guides | Print My Bingo</h1>
+    <h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4" id="h1"></h1>
     <div id="content" class="prose max-w-none prose-p:leading-relaxed prose-li:leading-relaxed prose-headings:text-gray-900"></div>
-    <div class="mt-10 p-5 bg-blue-50 rounded-2xl">
-      <p class="font-semibold text-blue-900 mb-2" data-i18n="ctaT">Generate cards now</p>
-      <p class="text-blue-900/90" data-i18n="ctaB">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
-      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/" data-i18n="ctaBtn">Open Generator</a>
-    </div>
   </article>
 </main>
 
@@ -52,62 +50,49 @@
 <script>
 const T = {
   en: {
-    navBlog: "Blog", navPrivacy: "Privacy", navTerms: "Terms", navAbout: "About",
-    h1: "Bingo Blog & Guides | Print My Bingo",
-    ctaT: "Generate cards now",
-    ctaB: "Open the generator, choose Numbers or Words, and print or save as PDF.",
-    ctaBtn: "Open Generator",
-    back: "← Print My Bingo",
-    body: `<p>Practical guides and ready-to-use ideas to help you run better bingo activities. These pages are written for real people and optimized for search.</p>
-<div class="grid md:grid-cols-2 gap-6 mt-6">
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/classroom-bingo.html"><h2 class="text-xl font-bold mb-2">Classroom Bingo (Teachers)</h2><p>Vocabulary, math, science, and review formats.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/fundraising-bingo-night.html"><h2 class="text-xl font-bold mb-2">Fundraising Bingo Night</h2><p>Rules, prizes, and printing unique cards.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/birthday-party-bingo.html"><h2 class="text-xl font-bold mb-2">Birthday Party Bingo</h2><p>Themes and word lists for kids.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/human-bingo-icebreaker.html"><h2 class="text-xl font-bold mb-2">Human Bingo Icebreaker</h2><p>Prompts for team-building and workshops.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/print-bingo-cards-pdf.html"><h2 class="text-xl font-bold mb-2">Print as PDF</h2><p>Margins, scale, orientation, troubleshooting.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/bingo-rules-variations.html"><h2 class="text-xl font-bold mb-2">Bingo Rules & Variations</h2><p>Patterns, speed rounds, fairness tips.</p></a>
-</div>`
+    title: "Bingo Blog | Print My Bingo",
+    desc: "Bingo guides and printable game ideas.",
+    h1: "Bingo Blog | Print My Bingo",
+    navBlog:"Blog", navPrivacy:"Privacy", navTerms:"Terms", navAbout:"About",
+    back:"← Print My Bingo",
+    body: `<p>Guides and ideas for teachers, parents, and event organizers. Choose a topic below.</p><div class='grid md:grid-cols-2 gap-6 mt-6'><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/classroom-bingo.html'><h2 class='text-xl font-bold mb-2'>Classroom Bingo Activities (Teachers’ Guide)</h2><p>Teacher-friendly classroom bingo activities for vocabulary, math, science, and review games.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/fundraising-bingo-night.html'><h2 class='text-xl font-bold mb-2'>Fundraising Bingo Night: Step-by-Step Plan</h2><p>How to run a fundraising bingo night: rules, prizes, and printing unique cards.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/birthday-party-bingo.html'><h2 class='text-xl font-bold mb-2'>Birthday Party Bingo (Kids): Themes & Word Lists</h2><p>Printable birthday bingo ideas for kids: themes, word lists, and quick rules.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/human-bingo-icebreaker.html'><h2 class='text-xl font-bold mb-2'>Human Bingo Icebreaker: Best Prompts</h2><p>Human Bingo prompts for team-building, onboarding, and workshops.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/print-bingo-cards-pdf.html'><h2 class='text-xl font-bold mb-2'>How to Print Bingo Cards as PDF (High Quality)</h2><p>Printing tips for clean bingo PDFs: margins, scale, orientation, troubleshooting.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/bingo-rules-variations.html'><h2 class='text-xl font-bold mb-2'>Bingo Rules & Variations (Quick Guide)</h2><p>Classic bingo rules, patterns, speed rounds, and fairness tips.</p></a></div>`
   },
   he: {
-    navBlog: "בלוג", navPrivacy: "פרטיות", navTerms: "תנאי שימוש", navAbout: "אודות",
-    h1: "בלוג ומדריכים | Print My Bingo",
-    ctaT: "צור/י כרטיסים עכשיו",
-    ctaB: "חזור/י למחולל, בחר/י מספרים או מילים, והדפס/י או שמור/י ל‑PDF.",
-    ctaBtn: "פתח את המחולל",
-    back: "← Print My Bingo",
-    body: `<p>מדריכים פרקטיים ורעיונות מוכנים שיעזרו לך להריץ בינגו טוב יותר — וגם מותאמים לחיפוש בגוגל.</p>
-<div class="grid md:grid-cols-2 gap-6 mt-6">
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/classroom-bingo.html"><h2 class="text-xl font-bold mb-2">בינגו בכיתה (מורים)</h2><p>אוצר מילים, מתמטיקה, מדעים ומשחקי חזרה.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/fundraising-bingo-night.html"><h2 class="text-xl font-bold mb-2">ערב בינגו להתרמה</h2><p>חוקים, פרסים והדפסת כרטיסים ייחודיים.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/birthday-party-bingo.html"><h2 class="text-xl font-bold mb-2">בינגו ליום הולדת</h2><p>ערכות נושא ורשימות מילים לילדים.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/human-bingo-icebreaker.html"><h2 class="text-xl font-bold mb-2">בינגו אנושי</h2><p>משפטים לאייסברייקר באירועי צוות.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/print-bingo-cards-pdf.html"><h2 class="text-xl font-bold mb-2">הדפסה ל‑PDF</h2><p>שוליים, קנה מידה, כיוון, פתרון תקלות.</p></a>
-  <a class="block border rounded-2xl p-5 hover:shadow-sm bg-gray-50" href="/blog/bingo-rules-variations.html"><h2 class="text-xl font-bold mb-2">חוקי בינגו ווריאציות</h2><p>תבניות ניצחון, סבבים מהירים, טיפים להוגנות.</p></a>
-</div>`
+    title: "בלוג בינגו | Print My Bingo",
+    desc: "מדריכי בינגו ורעיונות להדפסה.",
+    h1: "בלוג בינגו | Print My Bingo",
+    navBlog:"בלוג", navPrivacy:"פרטיות", navTerms:"תנאי שימוש", navAbout:"אודות",
+    back:"← Print My Bingo",
+    body: `<p>מדריכים ורעיונות למורים, הורים ומפיקי אירועים. בחרו נושא:</p><div class='grid md:grid-cols-2 gap-6 mt-6'><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/classroom-bingo.html'><h2 class='text-xl font-bold mb-2'>בינגו בכיתה (מדריך למורים)</h2><p>פעילויות בינגו לכיתה: אוצר מילים, מתמטיקה, מדעים ומשחקי חזרה.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/fundraising-bingo-night.html'><h2 class='text-xl font-bold mb-2'>ערב בינגו להתרמה: תוכנית צעד-אחר-צעד</h2><p>איך להרים ערב בינגו להתרמה: חוקים, פרסים והדפסת כרטיסים ייחודיים.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/birthday-party-bingo.html'><h2 class='text-xl font-bold mb-2'>בינגו ליום הולדת: ערכות נושא ורשימות</h2><p>רעיונות לבינגו יום הולדת לילדים: ערכות נושא, רשימות מילים וחוקים מהירים.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/human-bingo-icebreaker.html'><h2 class='text-xl font-bold mb-2'>בינגו אנושי: משפטים לאייסברייקר</h2><p>משפטים לבינגו אנושי לגיבוש צוות, אונבורדינג וסדנאות.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/print-bingo-cards-pdf.html'><h2 class='text-xl font-bold mb-2'>איך להדפיס בינגו ל-PDF באיכות גבוהה</h2><p>טיפים להדפסה נקייה ל-PDF: שוליים, קנה מידה, כיוון ופתרון תקלות.</p></a><a class='block border rounded-2xl p-5 hover:shadow-sm bg-gray-50' href='/blog/bingo-rules-variations.html'><h2 class='text-xl font-bold mb-2'>חוקי בינגו ווריאציות (מדריך מהיר)</h2><p>חוקי בינגו, תבניות ניצחון, סבבים מהירים וטיפים להוגנות.</p></a></div>`
   }
 };
 
-let lang = (navigator.language || "").toLowerCase().startsWith("he") ? "he" : "en";
-
-function apply() {
-  document.documentElement.lang = lang;
-  document.documentElement.dir = lang === "he" ? "rtl" : "ltr";
-  document.getElementById("langBtn").textContent = lang === "he" ? "English" : "עברית";
-  document.getElementById("backLink").textContent = T[lang].back;
-  document.getElementById("content").innerHTML = T[lang].body;
-
-  for (const el of document.querySelectorAll("[data-i18n]")) {
-    const k = el.getAttribute("data-i18n");
-    if (T[lang][k]) el.textContent = T[lang][k];
-  }
-
-  document.title = (lang === "he") ? "בלוג ומדריכים | Print My Bingo" : "Bingo Blog & Guides | Print My Bingo";
-  const metaDesc = document.querySelector('meta[name="description"]');
-  if (metaDesc) metaDesc.setAttribute("content", (lang === "he") ? "מדריכי בינגו, פעילויות לכיתה, ערכות נושא למסיבות וטיפים להדפסה." : "Bingo guides, classroom activities, party themes, and printing tips.");
+function getInitialLang(){
+  const saved = (localStorage.getItem('pm_lang') || '').toLowerCase();
+  if(saved === 'he' || saved === 'en') return saved;
+  return (navigator.language || '').toLowerCase().startsWith('he') ? 'he' : 'en';
 }
 
-document.getElementById("langBtn").addEventListener("click", () => {
-  lang = (lang === "he") ? "en" : "he";
+let lang = getInitialLang();
+
+function apply(){
+  document.documentElement.lang = lang;
+  document.documentElement.dir = (lang === 'he') ? 'rtl' : 'ltr';
+  document.title = T[lang].title;
+  const metaDesc = document.querySelector('meta[name="description"]');
+  if(metaDesc) metaDesc.setAttribute('content', T[lang].desc);
+  document.getElementById('h1').textContent = T[lang].h1;
+  document.getElementById('content').innerHTML = T[lang].body;
+  document.getElementById('langBtn').textContent = (lang === 'he') ? 'English' : 'עברית';
+  for(const el of document.querySelectorAll('[data-i18n]')){
+    const k = el.getAttribute('data-i18n');
+    if(T[lang][k]) el.textContent = T[lang][k];
+  }
+}
+
+document.getElementById('langBtn').addEventListener('click', () => {
+  lang = (lang === 'he') ? 'en' : 'he';
+  localStorage.setItem('pm_lang', lang);
   apply();
 });
 
