--- a/about.html
+++ b/about.html
@@ -4,15 +4,18 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About | Print My Bingo</title>
-<meta name="description" content="About the Print My Bingo project.">
+<meta name="description" content="About Print My Bingo and how to use it.">
 <meta name="robots" content="index,follow">
 <link rel="canonical" href="https://printmybingo.com/about.html">
+<link rel="alternate" href="https://printmybingo.com/about.html" hreflang="x-default">
+<link rel="alternate" href="https://printmybingo.com/about.html" hreflang="en">
+<link rel="alternate" href="https://printmybingo.com/about.html" hreflang="he">
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 <header class="bg-white border-b">
   <div class="max-w-6xl mx-auto p-4 flex items-center justify-between">
-    <a href="/" class="font-bold text-blue-700" id="backLink">← Print My Bingo</a>
+    <a href="/" class="font-bold text-blue-700" data-i18n="back">← Print My Bingo</a>
     <div class="flex items-center gap-4 text-sm">
       <nav class="hidden sm:flex gap-4">
         <a class="underline" href="/blog.html" data-i18n="navBlog">Blog</a>
@@ -27,13 +30,8 @@
 
 <main class="max-w-6xl mx-auto p-4">
   <article class="bg-white border rounded-2xl p-6 md:p-10 shadow-sm">
-    <h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4" data-i18n="h1">About | Print My Bingo</h1>
+    <h1 class="text-3xl md:text-4xl font-extrabold text-blue-800 mb-4" id="h1"></h1>
     <div id="content" class="prose max-w-none prose-p:leading-relaxed prose-li:leading-relaxed prose-headings:text-gray-900"></div>
-    <div class="mt-10 p-5 bg-blue-50 rounded-2xl">
-      <p class="font-semibold text-blue-900 mb-2" data-i18n="ctaT">Generate cards now</p>
-      <p class="text-blue-900/90" data-i18n="ctaB">Open the generator, choose Numbers or Words, and print or save as PDF.</p>
-      <a class="inline-block mt-4 bg-blue-600 text-white px-5 py-3 rounded-xl font-bold" href="/" data-i18n="ctaBtn">Open Generator</a>
-    </div>
   </article>
 </main>
 
@@ -44,50 +42,71 @@
 <script>
 const T = {
   en: {
-    navBlog: "Blog", navPrivacy: "Privacy", navTerms: "Terms", navAbout: "About",
+    title: "About | Print My Bingo",
+    desc: "About Print My Bingo and how to use it.",
     h1: "About | Print My Bingo",
-    ctaT: "Generate cards now",
-    ctaB: "Open the generator, choose Numbers or Words, and print or save as PDF.",
-    ctaBtn: "Open Generator",
-    back: "← Print My Bingo",
-    body: `<p><strong>Print My Bingo</strong> is built to do one thing really well: create printable bingo cards fast—without signup, without downloads, and without clutter.</p>
-<h2>Who is it for?</h2><ul><li><strong>Teachers</strong> – vocabulary, math, and review games.</li><li><strong>Parents</strong> – parties, holidays, and at-home activities.</li><li><strong>Event organizers</strong> – fundraising nights and community events.</li><li><strong>Teams</strong> – “Human Bingo” icebreakers for workshops and onboarding.</li></ul>
-<h2>Contact</h2><p>Email: <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></p>`
+    navBlog:"Blog", navPrivacy:"Privacy", navTerms:"Terms", navAbout:"About",
+    back:"← Print My Bingo",
+    body: `<p><strong>Print My Bingo</strong> is a lightweight, no-signup bingo card generator designed for one purpose: helping you create printable bingo cards fast.</p>
+<h3 class="mt-4 font-bold">What you can do here</h3>
+<ul class="list-disc list-inside space-y-2">
+  <li>Create <strong>number bingo</strong> (great for classic bingo, school events, and fundraising nights).</li>
+  <li>Create <strong>word bingo</strong> for classroom activities, language learning, trivia, or themed parties.</li>
+  <li>Choose a grid size (3×3 / 4×4 / 5×5), optionally use a FREE center, and print or save as PDF.</li>
+</ul>
+<h3 class="mt-4 font-bold">Who uses it?</h3>
+<p>Teachers, parents, event organizers, and teams that want “Human Bingo” icebreakers. The generator stays simple so you can get to printing in minutes.</p>
+<h3 class="mt-4 font-bold">Contact</h3>
+<p>If you have questions, feature requests, or advertising inquiries, email: <a class="underline text-blue-700" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a>.</p>
+<p class="text-sm text-gray-500 mt-4">Last updated: 2026-02-05</p>`
   },
   he: {
-    navBlog: "בלוג", navPrivacy: "פרטיות", navTerms: "תנאי שימוש", navAbout: "אודות",
+    title: "אודות | Print My Bingo",
+    desc: "אודות Print My Bingo ואיך משתמשים.",
     h1: "אודות | Print My Bingo",
-    ctaT: "צור/י כרטיסים עכשיו",
-    ctaB: "חזור/י למחולל, בחר/י מספרים או מילים, והדפס/י או שמור/י ל‑PDF.",
-    ctaBtn: "פתח את המחולל",
-    back: "← Print My Bingo",
-    body: `<p><strong>Print My Bingo</strong> נבנה כדי לעשות דבר אחד מצוין: ליצור כרטיסי בינגו להדפסה במהירות — בלי הרשמה, בלי הורדות ובלי עומס.</p>
-<h2>למי זה מתאים?</h2><ul><li><strong>מורים</strong> – אוצר מילים, מתמטיקה, משחקי חזרה.</li><li><strong>הורים</strong> – מסיבות, חגים ופעילויות בבית.</li><li><strong>מפיקי אירועים</strong> – ערבי התרמה ואירועי קהילה.</li><li><strong>צוותים</strong> – ״בינגו אנושי״ לאייסברייקר באונבורדינג וסדנאות.</li></ul>
-<h2>יצירת קשר</h2><p>אימייל: <a class="text-blue-700 underline" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></p>`
+    navBlog:"בלוג", navPrivacy:"פרטיות", navTerms:"תנאי שימוש", navAbout:"אודות",
+    back:"← Print My Bingo",
+    body: `<p><strong>Print My Bingo</strong> הוא מחולל בינגו קליל ומהיר, בלי הרשמה ובלי התקנות — כדי שתוכל/י ליצור כרטיסי בינגו להדפסה תוך דקות.</p>
+<h3 class="mt-4 font-bold">מה אפשר לעשות כאן</h3>
+<ul class="list-disc list-inside space-y-2">
+  <li>ליצור <strong>בינגו מספרים</strong> (קלאסי לערבי קהילה, בתי ספר והתרמות).</li>
+  <li>ליצור <strong>בינגו מילים</strong> לפעילויות בכיתה, לימוד שפה, טריוויה או מסיבות.</li>
+  <li>לבחור גודל לוח (3×3 / 4×4 / 5×5), אופציונלית משבצת FREE במרכז, ולהדפיס או לשמור כ־PDF.</li>
+</ul>
+<h3 class="mt-4 font-bold">למי זה מתאים?</h3>
+<p>למורים, הורים, מפיקי אירועים וצוותים שמחפשים ״בינגו אנושי״ לאייסברייקר. שמרנו את המחולל פשוט כדי להגיע מהר לתוצאה.</p>
+<h3 class="mt-4 font-bold">יצירת קשר</h3>
+<p>לשאלות, בקשות פיצ׳רים או פניות פרסום: <a class="underline text-blue-700" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a>.</p>
+<p class="text-sm text-gray-500 mt-4">עודכן לאחרונה: 2026-02-05</p>`
   }
 };
 
-let lang = (navigator.language || "").toLowerCase().startsWith("he") ? "he" : "en";
-
-function apply() {
-  document.documentElement.lang = lang;
-  document.documentElement.dir = lang === "he" ? "rtl" : "ltr";
-  document.getElementById("langBtn").textContent = lang === "he" ? "English" : "עברית";
-  document.getElementById("backLink").textContent = T[lang].back;
-  document.getElementById("content").innerHTML = T[lang].body;
-
-  for (const el of document.querySelectorAll("[data-i18n]")) {
-    const k = el.getAttribute("data-i18n");
-    if (T[lang][k]) el.textContent = T[lang][k];
-  }
-
-  document.title = (lang === "he") ? "אודות | Print My Bingo" : "About | Print My Bingo";
-  const metaDesc = document.querySelector('meta[name="description"]');
-  if (metaDesc) metaDesc.setAttribute("content", (lang === "he") ? "אודות פרויקט Print My Bingo." : "About the Print My Bingo project.");
+function getInitialLang(){
+  const saved = (localStorage.getItem('pm_lang') || '').toLowerCase();
+  if(saved === 'he' || saved === 'en') return saved;
+  return (navigator.language || '').toLowerCase().startsWith('he') ? 'he' : 'en';
 }
 
-document.getElementById("langBtn").addEventListener("click", () => {
-  lang = (lang === "he") ? "en" : "he";
+let lang = getInitialLang();
+
+function apply(){
+  document.documentElement.lang = lang;
+  document.documentElement.dir = (lang === 'he') ? 'rtl' : 'ltr';
+  document.title = T[lang].title;
+  const metaDesc = document.querySelector('meta[name="description"]');
+  if(metaDesc) metaDesc.setAttribute('content', T[lang].desc);
+  document.getElementById('h1').textContent = T[lang].h1;
+  document.getElementById('content').innerHTML = T[lang].body;
+  document.getElementById('langBtn').textContent = (lang === 'he') ? 'English' : 'עברית';
+  for(const el of document.querySelectorAll('[data-i18n]')){
+    const k = el.getAttribute('data-i18n');
+    if(T[lang][k]) el.textContent = T[lang][k];
+  }
+}
+
+document.getElementById('langBtn').addEventListener('click', () => {
+  lang = (lang === 'he') ? 'en' : 'he';
+  localStorage.setItem('pm_lang', lang);
   apply();
 });
 
