--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Terms of Use | Print My Bingo</title>
-<meta name="description" content="Terms of Use for Print My Bingo.">
+<title>Contact | Print My Bingo</title>
+<meta name="description" content="How to contact Print My Bingo.">
 <meta name="robots" content="index,follow">
-<link rel="canonical" href="https://printmybingo.com/terms.html">
-<link rel="alternate" href="https://printmybingo.com/terms.html" hreflang="x-default">
-<link rel="alternate" href="https://printmybingo.com/terms.html" hreflang="en">
-<link rel="alternate" href="https://printmybingo.com/terms.html" hreflang="he">
+<link rel="canonical" href="https://printmybingo.com/contact.html">
+<link rel="alternate" href="https://printmybingo.com/contact.html" hreflang="x-default">
+<link rel="alternate" href="https://printmybingo.com/contact.html" hreflang="en">
+<link rel="alternate" href="https://printmybingo.com/contact.html" hreflang="he">
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -42,45 +42,29 @@
 <script>
 const T = {
   en: {
-    title: "Terms of Use | Print My Bingo",
-    desc: "Terms of Use for Print My Bingo.",
-    h1: "Terms of Use | Print My Bingo",
+    title: "Contact | Print My Bingo",
+    desc: "How to contact Print My Bingo.",
+    h1: "Contact | Print My Bingo",
     navBlog:"Blog", navPrivacy:"Privacy", navTerms:"Terms", navAbout:"About",
     back:"← Print My Bingo",
-    body: `<p>These Terms of Use govern your use of <strong>Print My Bingo</strong>. By using the site, you agree to these terms.</p>
-<h3 class="mt-4 font-bold">1) The service</h3>
-<p>We provide a free, browser-based bingo card generator (numbers and words) that you can print or save as PDF using your browser.</p>
-<h3 class="mt-4 font-bold">2) Acceptable use</h3>
-<ul class="list-disc list-inside space-y-2">
-  <li>Do not use the site for illegal purposes.</li>
-  <li>Do not attempt to disrupt, overload, or reverse engineer the service.</li>
-  <li>You are responsible for the content you enter (e.g., word lists) and how you use generated cards.</li>
+    body: `<p>You can reach us by email for support, feature requests, or business inquiries.</p>
+<ul class="list-disc list-inside space-y-2 mt-3">
+  <li><strong>Email:</strong> <a class="underline text-blue-700" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></li>
+  <li><strong>Typical response time:</strong> 1–3 business days</li>
 </ul>
-<h3 class="mt-4 font-bold">3) Disclaimer</h3>
-<p>The service is provided “as is” without warranties. We are not liable for damages arising from use of the site.</p>
-<h3 class="mt-4 font-bold">4) Changes</h3>
-<p>We may update these terms from time to time.</p>
 <p class="text-sm text-gray-500 mt-4">Last updated: 2026-02-05</p>`
   },
   he: {
-    title: "תנאי שימוש | Print My Bingo",
-    desc: "תנאי שימוש של Print My Bingo.",
-    h1: "תנאי שימוש | Print My Bingo",
+    title: "צור קשר | Print My Bingo",
+    desc: "איך ליצור קשר עם Print My Bingo.",
+    h1: "צור קשר | Print My Bingo",
     navBlog:"בלוג", navPrivacy:"פרטיות", navTerms:"תנאי שימוש", navAbout:"אודות",
     back:"← Print My Bingo",
-    body: `<p>תנאי שימוש אלו מסדירים את השימוש שלך ב־<strong>Print My Bingo</strong>. שימוש באתר מהווה הסכמה לתנאים.</p>
-<h3 class="mt-4 font-bold">1) השירות</h3>
-<p>האתר מספק מחולל בינגו חינמי בדפדפן (מספרים ומילים) עם אפשרות הדפסה או שמירה כ־PDF דרך הדפדפן.</p>
-<h3 class="mt-4 font-bold">2) שימוש מותר</h3>
-<ul class="list-disc list-inside space-y-2">
-  <li>אין להשתמש באתר למטרות בלתי חוקיות.</li>
-  <li>אין לנסות לשבש, להעמיס או לבצע הנדסה לאחור.</li>
-  <li>את/ה אחראי/ת לתוכן שמוזן (למשל רשימות מילים) ולאופן השימוש בכרטיסים שנוצרו.</li>
+    body: `<p>אפשר ליצור איתנו קשר במייל לתמיכה, בקשות פיצ׳רים או פניות עסקיות.</p>
+<ul class="list-disc list-inside space-y-2 mt-3">
+  <li><strong>אימייל:</strong> <a class="underline text-blue-700" href="mailto:havivontm@gmail.com">havivontm@gmail.com</a></li>
+  <li><strong>זמן מענה משוער:</strong> 1–3 ימי עסקים</li>
 </ul>
-<h3 class="mt-4 font-bold">3) כתב ויתור</h3>
-<p>השירות ניתן “כפי שהוא” ללא אחריות. איננו אחראים לנזקים שייגרמו כתוצאה מהשימוש באתר.</p>
-<h3 class="mt-4 font-bold">4) שינויים</h3>
-<p>ייתכן שנעדכן את התנאים מעת לעת.</p>
 <p class="text-sm text-gray-500 mt-4">עודכן לאחרונה: 2026-02-05</p>`
   }
 };
